# home-lab

./: .aider.conf.yml  .clinerules  .editorconfig  .eslintrc.js  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierrc  .yamllint  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  COPILOT-FILES-SUMMARY.md  DEVELOPMENT_PLAN.md  GEMINI_RULES.md  Makefile-homelab  QUICKSTART-GUIDE.md  README-COPILOT-SETUP.md  README-VIBE-CODING-SETUP.md  README.md  SESSION_LOG.md  SESSION_SUMMARY.md  WARP.md  pyproject.toml  session-work.md
.claude/: README.md
.claude/agents/: ansible-devops.md  infra-validator.md  terraform-architect.md
.claude/commands/: ansible-validate.md  infra-deploy.md  tf-validate.md  vault-migrate.md
.claude/skills/ansible-bitwarden-integration/: SKILL.md
.claude/skills/ansible-vault-conventions/: SKILL.md
.claude/skills/homelab-ha-patterns/: SKILL.md
.claude/skills/terraform-module-architecture/: SKILL.md
.cursor/rules/: homelab.mdc
.github/: copilot_chat_instructions 2.md  copilot_chat_instructions.md  copilot_instructions_homelab.md
.github 2/: copilot_chat_instructions.md  copilot_instructions_homelab.md
ansible/: .gitignore  README.md  SECRETS_MIGRATION.md  ansible.cfg  deploy-haproxy.sh  deploy-pihole.sh  deploy-rancher.sh
ansible/group_vars/: all_vault.yml  all_vault.yml.template  anon_relay.yml  haproxy.yml  haproxy_vault.yml  haproxy_vault.yml.template  k3s_cluster.yml  k3s_cluster_vault.yml  k3s_cluster_vault.yml.template  k3s_workers.yml  nostr_relay.yml  pihole 2.yml  pihole.yml  pihole_vault.yml  pihole_vault.yml.template  rancher.yml  rancher_vault.yml.template  tor_exit_nodes.yml  tor_exit_nodes_vault.yml  tor_exit_nodes_vault.yml.template  ts-recorder_vault.yml  ts-recorder_vault.yml.template
ansible/group_vars/anon_relay/: vars.yml
ansible/inventory/: anon_relay.ini  haproxy-cluster.ini  k3s-cluster.ini  tor-exit-nodes.example  ts-ssh-recorder.ini  ubuntu-servers.ini
ansible/kubeconfig/: k3s-homelab-k3s.yaml
ansible/playbooks/: HAPROXY-QUICKSTART.md  PIHOLE-QUICKSTART.md  README-k3s.md  README_anon_relay.md  deploy-tor-exit-node.yml  deploy_anon_relay.yml  haproxy-keepalived-deploy.yml  k3s-cluster.yml  k3s-metallb-bgp.yml  k3s-metallb-migration.yml  longhorn-deploy.yml  pihole-deploy.yml  rancher-deploy.yml  tailscale-ssh-recorder-deploy.yml  ubuntu-baseline.yml
ansible/roles/haproxy-docker/defaults/: main.yml
ansible/roles/haproxy-docker/meta/: main.yml
ansible/roles/haproxy-docker/tasks/: main.yml
ansible/roles/haproxy-docker/templates/: haproxy.cfg.j2
ansible/roles/k3s-firewall/tasks/: main.yml
ansible/roles/k3s-helm/tasks/: main.yml
ansible/roles/k3s-longhorn/: README.md
ansible/roles/k3s-longhorn/defaults/: main.yml
ansible/roles/k3s-longhorn/tasks/: ingress.yml  install.yml  main.yml  prerequisites.yml
ansible/roles/k3s-longhorn/templates/: longhorn-values.yaml.j2
ansible/roles/k3s-master/defaults/: main.yml
ansible/roles/k3s-master/meta/: main.yml
ansible/roles/k3s-master/tasks/: main.yml  post-install.yml
ansible/roles/k3s-master/templates/: k3s-server-config.yaml.j2
ansible/roles/k3s-metallb-bgp/: README.md
ansible/roles/k3s-metallb-bgp/defaults/: main.yml
ansible/roles/k3s-metallb-bgp/tasks/: bgp-config.yml  main.yml  monitoring.yml  router-config.yml
ansible/roles/k3s-metallb-bgp/templates/: bgp-monitoring-configmap.yaml.j2  bgp-monitoring-deployment.yaml.j2  bgp-monitoring-service.yaml.j2  bgp-monitoring-servicemonitor.yaml.j2  bird-bgp-config.j2  cisco-bgp-config.j2  deploy-router-config.sh.j2  frr-bgp-config.j2  juniper-bgp-config.j2  metallb-bgp-advertisement.yaml.j2  metallb-bgp-peer.yaml.j2  metallb-bgp-pool.yaml.j2  metallb-migration-guide.md.j2  metallb-rollback.sh.j2  unifi-bgp-config.j2  unifi-cli-config.j2
ansible/roles/k3s-pihole/: README.md
ansible/roles/k3s-pihole/defaults/: main.yml
ansible/roles/k3s-pihole/meta/: main.yml
ansible/roles/k3s-pihole/tasks/: main.yml
ansible/roles/k3s-pihole/templates/: pihole-configmap.yaml.j2  pihole-deployment.yaml.j2  pihole-namespace.yaml.j2  pihole-pvc.yaml.j2  pihole-service.yaml.j2
ansible/roles/k3s-rancher/: README.md
ansible/roles/k3s-rancher/defaults/: main.yml
ansible/roles/k3s-rancher/meta/: main.yml
ansible/roles/k3s-rancher/tasks/: main.yml
ansible/roles/k3s-rancher/templates/: rancher-namespace.yaml.j2  rancher-values.yaml.j2
ansible/roles/k3s-tailscale/tasks/: main.yml
ansible/roles/k3s-worker/defaults/: main.yml
ansible/roles/k3s-worker/meta/: main.yml
ansible/roles/k3s-worker/tasks/: main.yml
ansible/roles/k3s-worker/templates/: k3s-agent-config.yaml.j2
ansible/roles/keepalived/defaults/: main.yml
ansible/roles/keepalived/handlers/: main.yml
ansible/roles/keepalived/meta/: main.yml
ansible/roles/keepalived/tasks/: main.yml
ansible/roles/keepalived/templates/: check_haproxy.sh.j2  keepalived.conf.j2
ansible/roles/tor-exit-node/: README.md
ansible/roles/tor-exit-node/defaults/: main.yml
ansible/roles/tor-exit-node/handlers/: main.yml
ansible/roles/tor-exit-node/meta/: main.yml
ansible/roles/tor-exit-node/tasks/: backup.yml  dns.yml  firewall.yml  hardening.yml  main.yml  monitoring.yml  prerequisites.yml  tor-config.yml  tor-install.yml
ansible/roles/tor-exit-node/templates/: 50unattended-upgrades.j2  exit-notice.html.j2  post-deployment-instructions.j2  tor-alert.sh.j2  torrc.j2  unbound.conf.j2
ansible/templates/anon_relay/: anonrc.j2  relay.yaml.j2
scripts/: migrate-metallb-l2-to-bgp.sh
scripts/docs/: DEVELOPMENT_PLAN.md
scripts/vault-bws-migration/: .gitignore  README.md  migrate-vault-to-bws.sh
scripts/yubikey-tools/: .gitignore  README.md  yubikey-setup.sh
terraform/: .tflint.hcl
